force-app/main/default/objects/Lookup__mdt/Lookup__mdt.object-meta.xml
<CustomObject>
    <description>metadata info for the custom lookup component</description>
    <label>Lookup</label>
    <pluralLabel>Lookup</pluralLabel>
</CustomObject>