force-app/main/default/objects/Lookup__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>FieldApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>