force-app/main/default/objects/Lookup__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <defaultValue>&apos;utility:dataset&apos;</defaultValue>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>