force-app/main/default/objects/Lookup__mdt/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>Info</label>
    <length>140</length>
    <type>Text</type>
</CustomField>