force-app/main/default/objects/Lookup__mdt/fields/RelatedObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectApiName__c</fullName>
    <label>RelatedObjectApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>